--- a/web/memory.html
+++ b/web/memory.html
@@ -45,7 +45,8 @@
             'compass',
             'flag',
             'balance',
-
+            'horse',
+			'pointer',
             'briefcase',
             'calculator',
             'office-chair',
