--- a/web/temperament.html
+++ b/web/temperament.html
@@ -78,7 +78,7 @@
             { id: 53, question: "Любите ли вы рассказывать истории друзьям?"},
             { id: 54, question: "Предпочитаете ли вы больше выигрывать, чем проигрывать?"},
             { id: 55, question: "Часто ли вы чувствуете себя неловко в обществе людей выше вас по положению?"},
-            { id: 56, question: "Когда обстоятельства против вас, обычно вы думаете тем не менее, что стоит еще что-либо предпринять?"},
+            { id: 56, question: "Когда обстоятельства против вас, обычно вы думаете, тем не менее, что стоит еще что-либо предпринять?"},
             { id: 57, question: "Часто ли у вас «сосет под ложечкой» перед важным делом?"}
         ];
 
