slider value reset

--- a/web/real_survey.html
+++ b/web/real_survey.html
@@ -146,6 +146,7 @@
             labelLeft.innerHTML = question.labels[0];
             labelCenter.innerHTML = question.labels[1];
             labelRight.innerHTML = question.labels[2];
+            slider.value = 5;
         };
 
         const nextQuestion = function() {
